[gd_scene load_steps=3 format=3 uid="uid://us18p26yg71o"]

[ext_resource type="Script" uid="uid://b3kmg6ioqk42k" path="res://scenes/UI/main_menu/main_menu.gd" id="1_oim1r"]
[ext_resource type="PackedScene" uid="uid://cygyj2gepkgaj" path="res://scenes/UI/settings/game_settings.tscn" id="2_6l5je"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oim1r")

[node name="UI" type="CanvasLayer" parent="."]

[node name="MainButtons" type="HBoxContainer" parent="UI"]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayButton" type="Button" parent="UI/MainButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "play"

[node name="SettingsButton" type="Button" parent="UI/MainButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "settings"

[node name="CreditsButton" type="Button" parent="UI/MainButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "credits"

[node name="ExitButton" type="Button" parent="UI/MainButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "exit"

[node name="GameSettings" parent="UI" instance=ExtResource("2_6l5je")]
unique_name_in_owner = true
visible = false
